#128 - Updated how range is displayed.

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -488,7 +488,7 @@
               <tr class="design-row">
                 <td>Range</td>
                 <td style="display: flex">
-                  <input name="system.vehicle.range" type="number" value="{{actor.system.vehicle.range}}" placeholder="300" />
+                  <input name="system.vehicle.range" type="text" value="{{actor.system.vehicle.range}}" placeholder="300" />
                   <span style="font-weight: bold; font-size: large; padding-left: 1em;"> miles</span>
                 </td>
                 <td class="question-container" id="range">
