#128 - Added cruising speed to the travel block

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -186,6 +186,19 @@
                     </div>
                   </td>
                 </tr>
+                <tr class="design-row">
+                  <td style="line-height: 27.5px">
+                    Cruising Speed
+                  </td>
+                  <td>
+                    {{round actor.system.travel.cruise 100}} yards per second or {{multiply actor.system.travel.cruise 100 2}} mph
+                  </td>
+                  <td class="question-container" id="travel-cruising-speed">
+                    <div class="question-button">
+                      <i class="fas fa-question"></i>
+                    </div>
+                  </td>
+                </tr>
               {{/if}}
             </table>
 
