#128 - Added the page reference for the Pick and Modify vehicle creation.

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -307,6 +307,17 @@
                   </div>
                 </td>
               </tr>
+              <tr class="design-row">
+                <td>Reference</td>
+                <td>
+                  {{actor.system.vehicle.baseVehicle.cite}}
+                </td>
+                <td class="question-container" id="base-vehicle-ref">
+                  <div class="question-button">
+                    <i class="fas fa-question"></i>
+                  </div>
+                </td>
+              </tr>
             </table>
             {{/if}}
 
