#133 - Skills can now receive BAD as a bonus, and a "Set to Ten" difficulty has been added which does what it sounds like.

--- a/templates/item/Consolidated-Item-sheet.html
+++ b/templates/item/Consolidated-Item-sheet.html
@@ -202,6 +202,14 @@
                     <input type="checkbox" name="system.weaponMaster" {{checked item.system.weaponMaster}} data-dtype="Boolean"/>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <label class="resource-label">Does this skill receive BAD as a bonus?</label>
+                </td>
+                <td style="display: flex">
+                    <input type="checkbox" name="system.naughty" {{checked item.system.naughty}} data-dtype="Boolean"/>
+                </td>
+            </tr>
             {{else}}
             <tr>
                 <td>
